backends/drm: Update enablement in queueChanges

An output may have been removed from m_surfaces when calling
`EglGbmBackend::testBuffer`, so add the output to m_surfaces before
doing tests.

BUG: 450501